# slonk

./: .gitignore  Cargo.toml  README.md  api.md  git_procedures.md
.github/workflows/: rust.yml
config/: proxima-karca-mock.json  test-adc-cs.json  titan-karca-party.json  titan-karca.json  titan-mk1.json  titan.json
src/: config.rs  console.rs  data.rs  execution.rs  heartbeat.rs  incoming.rs  lib.rs  main.rs  outgoing.rs  server.rs  state.rs  thread.rs
src/hardware/: mod.rs  spi.rs
